--- a/favorite/src/main/res/layout/fragment_favorite.xml
+++ b/favorite/src/main/res/layout/fragment_favorite.xml
@@ -28,8 +28,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <include
-        android:id="@+id/view_error"
-        layout="@layout/view_error"
+        android:id="@+id/view_empty"
+        layout="@layout/view_empty"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
